# CPP_SysMon

./: CMakeLists.txt  README.md
include/: CpuData.h  DisplayManager.h  ProcParser.h  Process.h  ProcessManager.h
src/: DisplayManager.cpp  ProcParser.cpp  Process.cpp  ProcessManager.cpp  main.cpp
